Исправлены замечания